tui/tests/snapshots/editor_normal__entry_after_quit_menu.snap
---
source: tui/tests/editor_normal.rs
assertion_line: 49
expression: text
snapshot_kind: text
---
 Glues - TUI note-taking app offering complete data control and flexible storage options               [?] Show keymap 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                           ████   ███                                                                   
                                          ██  ██   ██                                                                   
                                         ██        ██    ██  ██   ████    █████                                         
                                         ██        ██    ██  ██  ██  ██  ██                                             
                                         ██  ███   ██    ██  ██  ██████   ████                                          
                                          ██  ██   ██    ██  ██  ██          ██                                         
                                           █████  ████    ███ ██  ████   █████                                          
                                                                                                                        
                                                                                                                        
                                         ┌─────────────Open Notes─────────────┐                                         
                                         │                                    │                                         
                                         │   [i] Instant                      │                                         
                                         │   [l] Local                        │                                         
                                         │   [r] redb                         │                                         
                                         │   [g] Git                          │                                         
                                         │   [m] MongoDB                      │                                         
                                         │   [p] Proxy                        │                                         
                                         │   [h] Help                         │                                         
                                         │   [t] Theme                        │                                         
                                         │   [q] Quit                         │                                         
                                         │                                    │                                         
                                         └────────────────────────────────────┘
