tui/tests/snapshots/editor_normal__quit_menu_open.snap
---
source: tui/tests/editor_normal.rs
assertion_line: 31
expression: text
snapshot_kind: text
---
 Note 'Sample Note' normal mode                                                                        [?] Show keymap 
[Browser]                                   ▐ 󱇗 Sample Note                                                             
 󰝰 Notes                                    ▐ 1 Hi :D                                                                   
   󱇗 Sample Note                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                      ┌─────────────────Notebook─────────────────┐                                      
                                      │                                          │                                      
                                      │  Leave the notebook?                     │                                      
                                      │                                          │                                      
                                      │                                          │                                      
                                      │                                          │                                      
                                      │  [m] Back to menu                        │                                      
                                      │  [q] Quit                                │                                      
                                      │  [Esc] Cancel                            │                                      
                                      │                                          │                                      
                                      └──────────────────────────────────────────┘                                      
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ NORMAL   󰝰 Notes  󱇗 Sample Note 
